# Lemur

./: .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  Abell133obsid.js  Abell85obsid.js  CONTRIBUTING.md  Makefile  Ophiuchusobsid.js  README.md  app.js  count.js  count.php  fancy_table.html  gen_cluster_pages.py  index.html  lemur.sql  mailer.php  main.css  pyproject.toml  pytest.xml  test.php  wrangler.toml
.github/workflows/: ci.yml
Database/: main.py
Logiciel/: .~lock.Clusters.csv#  Clusters.csv  Mulroy.py  README.md
Papers/: Mulroy_vals.csv  ref.bib
Pipeline/: -home-carterrhea-Desktop-PipelineClusters-.txt  .env  Lemur_DB.sql  README.md  __init__.py  center.py  config.py  context.py  db.py  db_service.py  double_beta.py  generate_inputs_from_pickle.py  imaging.py  input.i  input.i~  input2.i  input_choices.i  input_choices.i~  pipeline.py  pipeline.py~  pipeline_choices.py  pipeline_choices.py~  preprocessing.py  requirements.txt  smoke_test.py  surface_brightness.py  web_export.py
Pipeline/Database/: Add_new.py  __init__.py  main.py
Pipeline/Fit_and_plot_only/: FIT_and_plot_ONLY.py  LSCalc.py  Post_Process.py  Profiles.py  __init__.py
Pipeline/Misc/: ASCalc.py  AdditionalPlots.py  Bkg_sub.py  Classes.py  LSCalc.py  PlotToWeb.py  PlotToWebDirect.py  Post_Process.py  Profiles.py  R_cool.py  RaDec.py  __init__.py  filenames.py  move.py  read_input.py
Pipeline/Preliminary/: Astrometric.py  BadPixel.py  CCD_split.py  Centroid.py  CreateLightcurves.py  Destreak.py  FaintCleaning.py  Flares.py  Merge.py  Process.py  __init__.py  chips_ccd.py  unzip.py
Pipeline/Spectra/: Batch_Spec.py  Fit_Temp.py  Fit_Temp.py~  annuli_create.py  deproject_mod.py
Pipeline/SurfaceBrightness/: CSB_bounds_merged.py  Coeff_SB.py  SBCalc_MERGED.py  SBProfile.py  __init__.py
Pipeline/ops/: __init__.py  enqueue_from_csv.py  enqueue_from_csv_sqlite.py  failed_clusters.csv  migrate_queue_mysql_to_sqlite.py  run_queue.py  sqlite_queue_schema.py
Pipeline/sql/: 2026_02_16_pipeline_ops.sql
Results/2203/: 1.ps  10.ps  11.ps  12.ps  13.ps  2.ps  3.ps  4.ps  5.ps  6.ps  7.ps  8.ps  9.ps  annuli_data.csv  annuli_data_max.csv  annuli_data_min.csv  temperatures.csv
Results/Abell133/: Abell133.csv  Abell133_lit.csv  comparison.py
Results/Abell85/: Abell85.csv  Abell85_lit.csv  comparison.py
Web/: Plot.html  access_db.js  app.js  cluster.html  index.html  main.css  reduction.html  stamps.html
Web/AboutUs/: About_us.html  about_us.css
Web/ClusterPages/: 2A0335+096.html  A1413.html  A1795.html  A1835.html  A2029.html  A2204.html  A3444.html  AS780.html  Abell133.html  Abell85.html  MACSJ0159.html  MACSJ0329.html  MACSJ1447.html  MACSJ1931.html  MS1455.html  Ophiuchus.html  PKS0745-191.html  Perseus.html  Pheonix.html  RBS797.html  RXCJ1115.html  RXCJ1504.html  RXJ1347.html  RXJ1532.html  RXJ1720.html  RXJ2129.html  SPT-CLJ0000-5748.html  SPT0000.html  cluster.css
Web/Filter_Table/: Plot.js  filter.css  filter_index.html  search.php  value.php
Web/Table/: Database2js.py  Database2js.py~  Results_table.js  ScreenCss.py  index.html  index_table.html
Web/Testing/: Test.html  Test.js  Test2.html
Web/common-js/: nav.js
Web/css/: nav.css  theme.css
Web/js/: app.js  (+1 more)
api/: app.py  db.py  ingest_sql_dump.py
cloudflare/: README.md
docs/: conf.py  index.rst  queue_workflow.rst
inputs/: 522.i  9400.i~  9428.i  A1068.i  A1413.i  A3444.i  A85.i  A85.i~  AS780.i  Abell133.i  Abell133.i~  Abell85.i  Abell85.i~  Ophiuchus.i  Ophiuchus.i~  Ophiuchus_test.i  Ophiuchus_test.i~  Pheonix.i  Profiles.py  RXCJ1115.i  RXJ2129.i  RXJ2129.i~  SPT-CLJ0000-5748.i  SPT0000.i  input.i  merged_test.i  merged_test.i~  template.i  template_local.i
scripts/: sync_fits.sh
survey/: clusters_grouped.pkl  galaxyClusters.csv  groupClusters.ipynb  group_clusters.py
tests/: test_api_app.py  test_api_helpers.py  test_ingest_sql_dump.py  test_pipeline_config.py  test_pipeline_db.py  test_pipeline_db_service.py  test_pipeline_module.py
(+9124 files in other folders)
